test/libsolidity/syntaxTests/nameAndTypeResolution/559_no_warning_for_using_members_that_look_like_address_members.sol
contract C {
    function transfer(uint) public;
    function f() public {
        this.transfer(10);
    }
}
// ----
// TypeError: (0-109): Contract "C" should be marked as abstract.
